-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 9
-
Component/s: client-libs
-
Environment:
Ubuntu 14.04 x64
Unity
Intel graphical card
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8085088 | emb-9 | Alexander Zvegintsev | P4 | Resolved | Fixed | team |
| JDK-8063899 | 8u45 | Alexander Zvegintsev | P4 | Resolved | Fixed | b01 |
| JDK-8059471 | 8u40 | Alexander Zvegintsev | P4 | Resolved | Fixed | b10 |
| JDK-8069983 | emb-8u47 | Alexander Zvegintsev | P4 | Resolved | Fixed | team |
| JDK-8072315 | 7u85 | Dmitry Markov | P4 | Resolved | Fixed | b01 |
| JDK-8061753 | 7u80 | Dmitry Markov | P4 | Resolved | Fixed | b03 |
| JDK-8061754 | 6u95 | Dmitry Markov | P4 | Resolved | Fixed | b01 |
Exception in thread "AWT-EventQueue-0" sun.awt.SunToolkit$OperationTimedOut: 20001
at sun.awt.X11.XToolkit.syncNativeQueue(XToolkit.java:2411)
at sun.awt.SunToolkit$3.dispatch(SunToolkit.java:1646)
at java.awt.EventQueue.dispatchEventImpl(EventQueue.java:752)
at java.awt.EventQueue.access$500(EventQueue.java:97)
at java.awt.EventQueue$3.run(EventQueue.java:705)
at java.awt.EventQueue$3.run(EventQueue.java:699)
at java.security.AccessController.doPrivileged(Native Method)
at java.security.ProtectionDomain$1.doIntersectionPrivilege(ProtectionDomain.java:75)
at java.awt.EventQueue.dispatchEvent(EventQueue.java:722)
at java.awt.EventDispatchThread.pumpOneEventForFilters(EventDispatchThread.java:190)
at java.awt.EventDispatchThread.pumpEventsForFilter(EventDispatchThread.java:115)
at java.awt.EventDispatchThread.pumpEventsForHierarchy(EventDispatchThread.java:104)
at java.awt.EventDispatchThread.pumpEvents(EventDispatchThread.java:100)
at java.awt.EventDispatchThread.pumpEvents(EventDispatchThread.java:92)
at java.awt.EventDispatchThread.run(EventDispatchThread.java:81)
The issue may be similar to
To reproduce the problem run the attached RealsyncTimeout.java test. To compile it use additionally ExtendedRobot class from here:
http://hg.openjdk.java.net/jdk9/jdk9/jdk/raw-file/tip/test/lib/testlibrary/ExtendedRobot.java
The tests can fail occasionally. And may not. The failure is not stable.
- backported by
-
JDK-8059471 OperationTimedOut exception inside from XToolkit.syncNativeQueue call
-
- Resolved
-
-
JDK-8061753 OperationTimedOut exception inside from XToolkit.syncNativeQueue call
-
- Resolved
-
-
JDK-8061754 OperationTimedOut exception inside from XToolkit.syncNativeQueue call
-
- Resolved
-
-
JDK-8063899 OperationTimedOut exception inside from XToolkit.syncNativeQueue call
-
- Resolved
-
-
JDK-8069983 OperationTimedOut exception inside from XToolkit.syncNativeQueue call
-
- Resolved
-
-
JDK-8072315 OperationTimedOut exception inside from XToolkit.syncNativeQueue call
-
- Resolved
-
-
JDK-8085088 OperationTimedOut exception inside from XToolkit.syncNativeQueue call
-
- Resolved
-
- duplicates
-
JDK-8039922 Test javax/swing/system/6799345/TestShutdown.java fails intermittently against JDK 7
-
- Closed
-
-
JDK-8066742 javax/swing/JInternalFrame/4251301/bug4251301.java:it fails automatically and throws sun.awt.SunToolkit$InfiniteLoop exception on terminal
-
- Closed
-
-
JDK-8066743 The regression-swing case fails automatically and throws sun.awt.SunToolkit$OperationTimedOut exception on terminal
-
- Closed
-
-
JDK-8066744 The case fail automatically with the sun.awt.SunToolkit$OperationTimedOut exception
-
- Closed
-
- relates to
-
JDK-8049032 [GNOME 3] issue with jdk8 and realSync
-
- Closed
-