8051857: OperationTimedOut exception inside from XToolkit.syncNativeQueue call

Reviewed-by: alexsch, serb